Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-97647

Crash on QAudioDecoder when running test

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 6.3.0 Alpha
    • 6.2
    • Multimedia
    • None
    • Android
    • 634f211ae69c6fa327d410527b00d3f7d00126e7 (qt/qtmultimedia/dev) 35313770c1894efdbc69373fe699d38fb90bf873 (qt/qtmultimedia/6.2)

    Description

      Crash on QAudioDecoder when running test

      When running auto tests on Android, QAudioDecoder can crash with SIGSEGV signal, or fail with QThread issues.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              samuelmira Samuel Mira
              samuelmira Samuel Mira
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes