Fix crashes on qandroidaudiodecoder

Running the auto tests in android can fail and it could lead to crashes
and a pending QThread. This patch is for fixing those issues.

Fixes: QTBUG-97647
Pick-to: 6.2
Change-Id: I578f199127519e4620abcb0dac36a1603d8d77bd
Reviewed-by: Lars Knoll <lars.knoll@qt.io>